# streamline-cookiecutter

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml  run_cookiecutter.py
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: requirements.base.txt
scripts/: format.sh  lint.sh
streamline/: pyproject.toml  run_cookiecutter.py
streamline/textual/: cookiecutter.css
{{cookiecutter.project_base_name}}/: pyproject.toml
{{cookiecutter.project_base_name}}/docker-compose/: docker-compose.yml
{{cookiecutter.project_base_name}}/make/scripts/: format.sh  lint.sh  test.sh
